[project]
name = "mistral-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "fastapi>=0.135.2",
    "flashinfer-python>=0.2.5",
    "ninja>=1.13.0",
    "nvidia-cublas-cu12>=12.1.3.1",
    "nvidia-cuda-nvrtc-cu12>=12.1.105",
    "nvidia-cuda-runtime-cu12>=12.1.105",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "setuptools>=82.0.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.4.0",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu121/torch2.5"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

flashinfer-python = { index = "flashinfer" }
